# prism-rag

./: .env.example  .gitignore  1.ipynb  Dockerfile  LICENSE  README.md  commit_message.txt  docker-compose.yml  pyproject.toml
demo/: README.md  aiso_hotel.txt  aiso_hotel_demo.ipynb  aiso_hotel_demo.py
scripts/: smoke.py
src/prism/: __init__.py
src/prism/api/: __init__.py  __main__.py  app.py  config.py  dependencies.py  routes.py  schemas.py
src/prism/core/: __init__.py  chunker.py  engine.py  graph.py  node.py
src/prism/embeddings/: __init__.py  base.py  sonar.py
src/prism/llm/: __init__.py  base.py  client.py  prompts.py
src/prism/schemas/: __init__.py  llm_outputs.py
src/prism/storage/: __init__.py  qdrant.py
src/prism/utils/: __init__.py  language.py  lexical.py  text.py
tests/: test_api.py  test_chunker.py  test_embeddings.py  test_graph.py  test_lexical.py  test_sonar_embedder.py  test_text.py
