[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "prism-rag"
version = "0.1.0"
description = "Keypoint-decomposition RAG engine over a hybrid vector–lexical knowledge graph"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Vadim Neshcheretov", email = "v.neshcheretov@gmail.com" },
]
keywords = ["rag", "retrieval-augmented-generation", "knowledge-graph", "qdrant", "sonar", "openai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "openai>=1.50",
    "qdrant-client>=1.10",
    "pydantic>=2.6",
    "numpy>=1.26",
    "tiktoken>=0.8",
    "snowballstemmer>=2.2",
    "python-dotenv>=1.0",
    "aiohttp>=3.9",
    "tenacity>=8.2",
    "langdetect>=1.0.9",
]

[project.optional-dependencies]
sonar = [
    "sonar-space>=0.2",
    "fairseq2>=0.3",
    "torch>=2.2",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.urls]
Repository = "https://github.com/vadimscher/prism-rag"

[tool.hatch.build.targets.wheel]
packages = ["src/prism"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
# RUF001/RUF002: Cyrillic vs Latin lookalikes — false positives on Russian text.
ignore = ["E501", "RUF001", "RUF002"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
