[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "prism-rag"
version = "0.1.0"
description = "Keypoint-decomposition RAG engine over a hybrid vector–lexical knowledge graph"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Vadim Neshcheretov", email = "v.neshcheretov@gmail.com" },
]
keywords = ["rag", "retrieval-augmented-generation", "knowledge-graph", "qdrant", "sonar", "openai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "openai>=1.50",
    "qdrant-client>=1.10",
    "pydantic>=2.6",
    "numpy>=1.26",
    "tiktoken>=0.8",
    "snowballstemmer>=2.2",
    "python-dotenv>=1.0",
    "aiohttp>=3.9",
    "tenacity>=8.2",
    "langdetect>=1.0.9",
]

[project.optional-dependencies]
# fairseq2 needs the libsndfile C library, which pip cannot install:
#   conda:  conda install -c conda-forge libsndfile
#   debian: apt install libsndfile1
# In conda envs fairseq2 only looks inside $CONDA_PREFIX/lib, so the
# system copy is not enough — install it into the env itself.
sonar = [
    "sonar-space>=0.2",
    "fairseq2>=0.3",
    "torch>=2.2",
]
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.30",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "httpx>=0.27",
]

[project.urls]
Repository = "https://github.com/vadimscher/prism-rag"

[tool.hatch.build.targets.wheel]
packages = ["src/prism"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
# RUF001/RUF002: Cyrillic vs Latin lookalikes — false positives on Russian text.
ignore = ["E501", "RUF001", "RUF002"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's DI relies on calling Depends() in argument defaults.
extend-immutable-calls = ["fastapi.Depends"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: loads real models or hits external services; run with `pytest -m integration`",
]
addopts = "-m 'not integration'"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
